# griptape-nodes-minimax-remover-library

./: .gitignore  .gitmodules  README.md  pyproject.toml
example_nodes_template/: camera_angle_picker.py  griptape_nodes_library.json
griptape_nodes_minimax_remover/: __init__.py  griptape_nodes_library.json  minimax_remover_library_advanced.py  minimax_remover_video_node.py
