[project]
name = "griptape-nodes-minimax-remover-library"
version = "0.1.0"
description = "MiniMax-Remover integration for Griptape Nodes - AI-powered video object removal"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "griptape-nodes",
    "pygit2",
]

[tool.uv.sources]
griptape-nodes = { git = "https://github.com/griptape-ai/griptape-nodes", rev="latest"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
